# ink

./: .gitignore  Cps.hs  Direct.hs  LICENSE  Main.hs  Stack.hs  cps.hs  direct.hs  ink.cabal  ink.hs
