name:                ink
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             ISC
license-file:        LICENSE
author:              Daniel Benjamin Collins
maintainer:          mail@dcollins.info
copyright:           Copyright (c) 2014 Daniel Collins <mail@dcollins.info>
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable ink
  main-is:           Main.hs            
  other-modules:     Cps, Direct       
  build-depends:     base ==4.6.*

